--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>風景スクリーンセーバー</title>
+    <title>Landscape Clock</title>
     
     <!-- PWA関連メタタグ -->
     <link rel="manifest" href="/manifest.json">
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <meta name="apple-mobile-web-app-title" content="風景スクリーンセーバー">
+    <meta name="apple-mobile-web-app-title" content="Landscape Clock">
     
     <!-- アイコン -->
     <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192x192.png">
@@ -186,8 +186,6 @@
             background-color: rgba(0, 0, 0, 0.7);
         }
         /* ここまでコントロールパネルのスタイル */
-
-        /* キーワード関連のスタイルをすべて置き換える */
 
         /* 現在のキーワード表示 */
         .current-keyword {
