--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             transition: opacity 2s ease-in-out;
             z-index: 1;
             /* 初期状態では背景色を黒に設定 */
-            background-color: #000;
+            /* background-color: #000; */
         }
         
         /* 画像読み込み前の初期状態 */
