--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 
         .background.fade-in {
             animation: fadeInImage 2s ease-in-out forwards;
-            /* background-blend-mode: normal; */
+            background-blend-mode: normal;
         }
 
         .active {
