--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,9 @@
         }
         /* 画像フェードインアニメーション */
         @keyframes fadeInImage {
-            0% { opacity: 0; }
+            0% { opacity: 0;
+                background-color: #1a365d;
+             }
             100% { opacity: 1; }
         }
 
