--- a/public/index.html
+++ b/public/index.html
@@ -102,9 +102,7 @@
         }
         /* 画像フェードインアニメーション */
         @keyframes fadeInImage {
-            0% { opacity: 0;
-                background-color: #1a365d;
-             }
+            0% { opacity: 0; }
             100% { opacity: 1; }
         }
 
