--- a/public/index.html
+++ b/public/index.html
@@ -460,8 +460,9 @@
         // 設定
         const KEYWORDS = ['landscape', 'mountains', 'ocean', 'forest', 'sunset', 'winter', 'summer', 'city', 'desert', 'beach', 'night'];
         const CACHE_KEY = 'unsplash_photos_cache';
-        const CACHE_EXPIRY = 2 * 60 * 60 * 1000; // 2時間（ミリ秒）
-        const PHOTOS_COUNT = 30; // 一度に取得する画像の数
+        // const CACHE_EXPIRY = 2 * 60 * 60 * 1000; // 2時間（ミリ秒）
+        const CACHE_EXPIRY = 30 * 1000; // デバッグ30秒（ミリ秒）
+        const PHOTOS_COUNT = 3; // 一度に取得する画像の数
 
 
         // Pages Functions API エンドポイント（相対パス）
