--- a/public/index.html
+++ b/public/index.html
@@ -1033,6 +1033,7 @@ function changeBackground() {
   
   // 次の背景要素
   const nextBg = backgrounds[currentBgIndex];
+  console.log(nextBg);
   
   // 画像がまだ読み込まれていない場合
   if (nextBg.dataset.backgroundImage) {
