--- a/public/index.html
+++ b/public/index.html
@@ -1034,9 +1034,9 @@ function changeBackground() {
   // 次の背景要素
   const nextBg = backgrounds[currentBgIndex];
   
-  // 画像がまだ読み込まれていない場合
+  // 背景画像のURLが保存されている場合は読み込む（1周目）
   if (nextBg.dataset.backgroundImage) {
-    // 初期状態にローディングクラスを追加（黒背景から始まる）
+    // 初期状態にローディングクラスを追加
     nextBg.classList.add('loading');
     
     // 非同期で画像を読み込む
@@ -1044,13 +1044,20 @@ function changeBackground() {
     nextImage.onload = () => {
       // 画像が読み込まれたら背景に設定
       nextBg.style.backgroundImage = `url(${nextBg.dataset.backgroundImage})`;
-      // dataset.backgroundImageをクリアする行を削除
+      // この行を削除: nextBg.dataset.backgroundImage = '';
       
       // フェードイン効果を適用
       nextBg.classList.remove('loading');
       nextBg.classList.add('fade-in');
     };
     nextImage.src = nextBg.dataset.backgroundImage;
+  } 
+  // すでに背景画像が設定されている場合（2周目以降）
+  else if (nextBg.style.backgroundImage) {
+    // 必要に応じてフェードイン効果を再適用
+    if (!nextBg.classList.contains('fade-in')) {
+      nextBg.classList.add('fade-in');
+    }
   }
   
   // 次の背景をアクティブにする
@@ -1060,7 +1067,7 @@ function changeBackground() {
   updatePhotoInfo(currentBgIndex);
   updateCurrentKeyword(currentBgIndex);
   
-  // その次の背景も事前に読み込む
+  // その次の背景も事前に読み込む（修正なし）
   const preloadIndex = (currentBgIndex + 1) % backgrounds.length;
   if (backgrounds[preloadIndex] && backgrounds[preloadIndex].dataset.backgroundImage) {
     const preloadImg = new Image();
