--- a/public/index.html
+++ b/public/index.html
@@ -1022,7 +1022,7 @@ function changeBackground() {
   console.log(`changeBackground: 現在=${currentBgIndex}, 総数=${backgrounds.length}`);
   
   // 現在の背景を非アクティブにする
-  backgrounds[currentBgIndex].classList.remove('fade-in');
+//   backgrounds[currentBgIndex].classList.remove('fade-in');
   backgrounds[currentBgIndex].classList.remove('active');
   
   // 次の背景インデックスに進む
