--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
             background-position: center;
             opacity: 0;
             transition: opacity 2s ease-in-out;
+            transition: background-color 2s ease-in-out;
             z-index: 1;
             /* 初期状態では背景色を黒に設定 */
             background-color: #000;
