loading language change from jp to en

--- a/public/index.html
+++ b/public/index.html
@@ -373,14 +373,14 @@
 <body>
     <div class="loading" id="loading">
         <div class="spinner"></div>
-        <div>美しい風景写真を読み込み中...</div>
+        <div>Loading Beautiful Images...</div>
     </div>
 
     <div class="overlay"></div>
     
     <!-- オフライン通知 -->
     <div class="offline-notice" id="offline-notice">
-        オフラインモード
+        Offline Mode
     </div>
     
     <!-- 現在の画像のキーワード表示 -->
