--- a/public/index.html
+++ b/public/index.html
@@ -223,11 +223,11 @@
         .keyword-tag::after {
             content: '';
             display: inline-block;
-            width: 10px;
-            height: 10px;
-            margin-left: 8px;
-            border-right: 2px solid white;
-            border-bottom: 2px solid white;
+            width: 7px;         /* 10pxから7pxに縮小 */
+            height: 7px;        /* 10pxから7pxに縮小 */
+            margin-left: 6px;   /* 8pxから6pxに縮小 */
+            border-right: 1.5px solid white;  /* 2pxから1.5pxに細く */
+            border-bottom: 1.5px solid white; /* 2pxから1.5pxに細く */
             transform: rotate(45deg);
             transition: transform 0.3s ease;
         }
